Add registration email sending interface
